[gd_scene load_steps=27 format=3 uid="uid://bmeje5gp2wvir"]

[ext_resource type="Script" uid="uid://ct0pjsotp1kws" path="res://base_element/main.gd" id="1_1mkjp"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_1e1p8"]
[ext_resource type="PackedScene" uid="uid://dd14e8nxealyr" path="res://base_element/sapar.tscn" id="2_8xjy2"]
[ext_resource type="PackedScene" uid="uid://csk5occwrdvvn" path="res://enemy/walker/walker.tscn" id="3_a456m"]
[ext_resource type="PackedScene" uid="uid://cd7fdo7mu62ot" path="res://base_element/player.tscn" id="3_gjn4q"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="5_q6855"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="6_1e1p8"]
[ext_resource type="Script" uid="uid://yv2338tsraaq" path="res://base_element/level_manager.gd" id="7_ovjmg"]
[ext_resource type="PackedScene" uid="uid://c8sh5psuo3lob" path="res://levels/level_start.tscn" id="8_ovjmg"]
[ext_resource type="Script" uid="uid://boym1bdna7aip" path="res://dialogue/monologue_manager.gd" id="9_ja8ph"]
[ext_resource type="Script" uid="uid://b7ul8ekvj17vi" path="res://dialogue/dialogue_manager.gd" id="10_w5ejl"]
[ext_resource type="Texture2D" uid="uid://coxmonfpfe4bh" path="res://pic/history.png" id="11_ce18j"]
[ext_resource type="Texture2D" uid="uid://cxy4ghexgc06t" path="res://pic/history_press.png" id="12_6tw1v"]
[ext_resource type="Texture2D" uid="uid://cqxutpk3ccvns" path="res://pic/history_float.png" id="13_nkhoc"]
[ext_resource type="Texture2D" uid="uid://dfv0e6do3ycd2" path="res://pic/message.png" id="14_ce18j"]
[ext_resource type="Script" uid="uid://dueojsmqgr3wa" path="res://base_element/combat_ui.gd" id="15_pa7vq"]
[ext_resource type="Texture2D" uid="uid://b2ej5vut6yxvg" path="res://pic/HP_Bar/bg.png" id="16_1v3ad"]
[ext_resource type="FontFile" uid="uid://buxcof55x5k4x" path="res://pic/PixelBoxMonospace.ttf" id="16_ruib1"]
[ext_resource type="Texture2D" uid="uid://ceyxir6p2ljg5" path="res://pic/HP_Bar/red.png" id="17_1v3ad"]
[ext_resource type="Texture2D" uid="uid://eca7s3iia6lx" path="res://pic/HP_Bar/blue.png" id="18_ruib1"]
[ext_resource type="Texture2D" uid="uid://befx8w411tfg" path="res://pic/attack.png" id="21_a456m"]
[ext_resource type="Texture2D" uid="uid://dfg2sbhc2hmx2" path="res://pic/Coin.png" id="21_i1oh8"]

[sub_resource type="Resource" id="Resource_ovjmg"]
script = ExtResource("6_1e1p8")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="LabelSettings" id="LabelSettings_ja8ph"]
font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rfke"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.811765)
corner_radius_top_left = 30
corner_radius_bottom_left = 30
corner_detail = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_kj7ta"]
Panel/styles/panel = SubResource("StyleBoxFlat_6rfke")

[node name="main" type="Node2D" node_paths=PackedStringArray("player", "sapar", "Enemy_base")]
script = ExtResource("1_1mkjp")
player = NodePath("Player")
sapar = NodePath("sapar")
Enemy_base = NodePath("enemys")

[node name="Camera" type="Camera2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(-104, 40)
zoom = Vector2(2, 2)
process_callback = 0

[node name="PhantomCameraHost" type="Node" parent="Camera"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("2_1e1p8")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="golds" type="Node2D" parent="."]

[node name="enemys" type="Node2D" parent="."]

[node name="Walker" parent="enemys" instance=ExtResource("3_a456m")]

[node name="sapar" parent="." instance=ExtResource("2_8xjy2")]

[node name="Player" parent="." instance=ExtResource("3_gjn4q")]
position = Vector2(-104, 40)

[node name="PCam" type="Node2D" parent="." node_paths=PackedStringArray("follow_target")]
top_level = true
position = Vector2(-104, 40)
script = ExtResource("5_q6855")
follow_mode = 2
follow_target = NodePath("../Player")
zoom = Vector2(2, 2)
tween_resource = SubResource("Resource_ovjmg")
follow_damping = true
follow_damping_value = Vector2(0.2, 0.2)
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="Level_manager" type="Node2D" parent="."]
script = ExtResource("7_ovjmg")
Level_start = ExtResource("8_ovjmg")

[node name="Dialogs" type="CanvasLayer" parent="."]

[node name="MonologueManager" type="Control" parent="Dialogs"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("9_ja8ph")

[node name="Label" type="Label" parent="Dialogs/MonologueManager"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_ja8ph")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="Dialogs/MonologueManager"]
one_shot = true

[node name="DialogueManager" type="Control" parent="Dialogs"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("10_w5ejl")

[node name="HistoryPanel" type="Panel" parent="Dialogs/DialogueManager"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(400, 500)
layout_mode = 2
offset_left = 1920.0
offset_right = 1920.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = SubResource("Theme_kj7ta")

[node name="MarginContainer" type="MarginContainer" parent="Dialogs/DialogueManager/HistoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="HistoryScroll" type="ScrollContainer" parent="Dialogs/DialogueManager/HistoryPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="list" type="VBoxContainer" parent="Dialogs/DialogueManager/HistoryPanel/MarginContainer/HistoryScroll"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
alignment = 2

[node name="History" type="TextureButton" parent="Dialogs/DialogueManager"]
unique_name_in_owner = true
self_modulate = Color(0.340339, 0.340339, 0.340339, 1)
layout_mode = 0
offset_left = 1832.0
offset_top = 24.0
offset_right = 1899.0
offset_bottom = 92.0
texture_normal = ExtResource("11_ce18j")
texture_pressed = ExtResource("12_6tw1v")
texture_hover = ExtResource("13_nkhoc")

[node name="message_come" type="TextureRect" parent="Dialogs/DialogueManager/History"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -72.0
offset_top = 8.0
offset_right = -22.0
offset_bottom = 58.0
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("14_ce18j")
flip_h = true

[node name="dialogue_timer" type="Timer" parent="Dialogs/DialogueManager"]
unique_name_in_owner = true

[node name="CombatUI" type="Control" parent="Dialogs"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("15_pa7vq")

[node name="State" type="MarginContainer" parent="Dialogs/CombatUI"]
layout_mode = 1
offset_right = 516.0
offset_bottom = 79.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Dialogs/CombatUI/State"]
layout_mode = 2

[node name="HP" type="HBoxContainer" parent="Dialogs/CombatUI/State/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Dialogs/CombatUI/State/VBoxContainer/HP"]
layout_mode = 2
theme_override_colors/font_color = Color(0.253843, 0.253843, 0.253843, 1)
theme_override_fonts/font = ExtResource("16_ruib1")
theme_override_font_sizes/font_size = 50
text = "HP"

[node name="HP" type="TextureProgressBar" parent="Dialogs/CombatUI/State/VBoxContainer/HP"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0
step = 0.01
nine_patch_stretch = true
stretch_margin_left = 150
stretch_margin_right = 150
texture_under = ExtResource("16_1v3ad")
texture_progress = ExtResource("17_1v3ad")

[node name="Shield" type="TextureProgressBar" parent="Dialogs/CombatUI/State/VBoxContainer/HP"]
unique_name_in_owner = true
visible = false
layout_mode = 2
max_value = 2.0
step = 0.01
nine_patch_stretch = true
stretch_margin_left = 40
stretch_margin_right = 40
texture_under = ExtResource("16_1v3ad")
texture_progress = ExtResource("18_ruib1")
tint_progress = Color(0, 1, 0, 1)

[node name="Gold" type="HBoxContainer" parent="Dialogs/CombatUI/State/VBoxContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="Dialogs/CombatUI/State/VBoxContainer/Gold"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("21_i1oh8")
expand_mode = 1

[node name="gold_aomout" type="Label" parent="Dialogs/CombatUI/State/VBoxContainer/Gold"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("16_ruib1")
theme_override_font_sizes/font_size = 60
text = "0"

[node name="Attack" type="HBoxContainer" parent="Dialogs/CombatUI/State/VBoxContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="Dialogs/CombatUI/State/VBoxContainer/Attack"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("21_a456m")
stretch_mode = 3

[node name="Attack_amount" type="Label" parent="Dialogs/CombatUI/State/VBoxContainer/Attack"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("16_ruib1")
theme_override_font_sizes/font_size = 60
text = "2"

[node name="cooldown" type="MarginContainer" parent="Dialogs/CombatUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Menu" type="Control" parent="Dialogs"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShieldRecoverTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="take_damage" from="Player" to="." method="_on_player_take_damage"]
[connection signal="take_gold" from="Player" to="." method="_on_player_take_gold"]
[connection signal="timeout" from="Dialogs/MonologueManager/Timer" to="Dialogs/MonologueManager" method="_on_timer_timeout"]
[connection signal="pressed" from="Dialogs/DialogueManager/History" to="Dialogs/DialogueManager" method="_on_history_pressed"]
[connection signal="timeout" from="Dialogs/DialogueManager/dialogue_timer" to="Dialogs/DialogueManager" method="_on_dialogue_timer_timeout"]
[connection signal="timeout" from="ShieldRecoverTimer" to="." method="_on_shield_recover_timer_timeout"]
